@@ -103,154 +103,3 @@ precision
 get_time_base
 min_fixed_int
 max_fixed_int
-Posix_Error_clearErrno
-Posix_Error_getErrno
-Posix_Error_strerror
-Posix_FileSys_Dirstream_readdir
-Posix_FileSys_ST_isBlk
-Posix_FileSys_ST_isChr
-Posix_FileSys_ST_isDir
-Posix_FileSys_ST_isFIFO
-Posix_FileSys_ST_isLink
-Posix_FileSys_ST_isReg
-Posix_FileSys_ST_isSock
-Posix_FileSys_Stat_atime
-Posix_FileSys_Stat_ctime
-Posix_FileSys_Stat_dev
-Posix_FileSys_Stat_fstat
-Posix_FileSys_Stat_gid
-Posix_FileSys_Stat_ino
-Posix_FileSys_Stat_lstat
-Posix_FileSys_Stat_mode
-Posix_FileSys_Stat_mtime
-Posix_FileSys_Stat_nlink
-Posix_FileSys_Stat_size
-Posix_FileSys_Stat_stat
-Posix_FileSys_Stat_uid
-Posix_FileSys_Utimbuf_setActime
-Posix_FileSys_Utimbuf_setModTime
-Posix_FileSys_Utimbuf_utime
-Posix_FileSys_getcwd
-Posix_FileSys_readlink
-Posix_IO_FLock_fcntl
-Posix_IO_FLock_len
-Posix_IO_FLock_pid
-Posix_IO_FLock_setLen
-Posix_IO_FLock_setPid
-Posix_IO_FLock_setStart
-Posix_IO_FLock_setType
-Posix_IO_FLock_setWhence
-Posix_IO_FLock_start
-Posix_IO_FLock_type
-Posix_IO_FLock_whence
-Posix_IO_pipe
-Posix_IO_read
-Posix_IO_write
-Posix_ProcEnv_Tms_cstime
-Posix_ProcEnv_Tms_cutime
-Posix_ProcEnv_Tms_stime
-Posix_ProcEnv_Tms_utime
-Posix_ProcEnv_Uname_machine
-Posix_ProcEnv_Uname_nodename
-Posix_ProcEnv_Uname_release
-Posix_ProcEnv_Uname_sysname
-Posix_ProcEnv_Uname_uname
-Posix_ProcEnv_Uname_version
-Posix_ProcEnv_ctermid
-Posix_ProcEnv_environ
-Posix_ProcEnv_getenv
-Posix_ProcEnv_getgroups
-Posix_ProcEnv_getlogin
-Posix_ProcEnv_times
-Posix_ProcEnv_ttyname
-Posix_Process_exec
-Posix_Process_exece
-Posix_Process_execp
-Posix_Process_exitStatus
-Posix_Process_ifExited
-Posix_Process_ifSignaled
-Posix_Process_ifStopped
-Posix_Process_stopSig
-Posix_Process_termSig
-Posix_Process_waitpid
-Posix_SysDB_Group_gid
-Posix_SysDB_Group_mem
-Posix_SysDB_Group_name
-Posix_SysDB_Passwd_dir
-Posix_SysDB_Passwd_gid
-Posix_SysDB_Passwd_name
-Posix_SysDB_Passwd_shell
-Posix_SysDB_Passwd_uid
-Posix_SysDB_getgrgid
-Posix_SysDB_getgrnam
-Posix_SysDB_getpwnam
-Posix_SysDB_getpwuid
-Posix_TTY_Termios_cc
-Posix_TTY_Termios_cfgetispeed
-Posix_TTY_Termios_cfgetospeed
-Posix_TTY_Termios_cflag
-Posix_TTY_Termios_iflag
-Posix_TTY_Termios_lflag
-Posix_TTY_Termios_oflag
-Posix_TTY_Termios_setcc
-Posix_TTY_Termios_setcflag
-Posix_TTY_Termios_setiflag
-Posix_TTY_Termios_setispeed
-Posix_TTY_Termios_setlflag
-Posix_TTY_Termios_setoflag
-Posix_TTY_Termios_setospeed
-Posix_TTY_getattr
-Posix_TTY_setattr
-access
-alarm
-chdir
-chmod
-chown
-close
-closedir
-dup
-dup2
-exit
-fchmod
-fchown
-fcntl
-fork
-fpathconf
-fsync
-ftruncate
-getegid
-geteuid
-getgid
-getpgrp
-getpid
-getppid
-getuid
-isatty
-kill
-link
-lseek
-mkdir
-mkfifo
-open
-opendir
-pathconf
-pause
-rename
-rewinddir
-rmdir
-setenv
-setgid
-setpgid
-setsid
-setuid
-sleep
-symlink
-sysconf
-tcdrain
-tcflow
-tcflush
-tcgetpgrp
-tcsendbreak
-tcsetpgrp
-umask
-unlink
